# quarto-pub

./: README.md
2022-09-22-poetry-and-posit/: index.qmd
2022-09-22-python-poetry/: _publish.yml  index.qmd
example-poetry/: pyproject.toml
